<resources>
    <string name="app_name">day08_4</string>
    <!-- 상단 메뉴 -->
    <string name="menu_camera">사진촬영</string>
    <string name="menu_diary">일기쓰기</string>
    <string name="menu_cs">고객센터</string>

    <!-- 하단 메뉴 -->
    <string name="menu_main">메인</string>
    <string name="menu_join">회원가입</string>
    <string name="menu_login">로그인</string>

    <!-- 회원 가입 -->
    <string name="user_join">회원가입</string>
    <string name="userId">아이디</string>
    <string name="userPw">비밀번호</string>
    <string name="userPwRe">비밀번호 확인</string>
    <string name="userNm">회원명</string>
    <string name="join_btn">가입하기</string>

    <!-- 로그인 -->
    <string name="user_login">로그인</string>
    <string name="login_btn">로그인하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>